--- a/templates/user/users.twig
+++ b/templates/user/users.twig
@@ -4,6 +4,8 @@
 
 {% set page_title = 'Users' %}
 
+{% set is_super = current_authorizations.isSuper() %}
+
 {% block breadcrumb_links %}
     <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
 {% endblock %}
@@ -15,20 +17,27 @@
 
     {{ pagination.pagination(page, last, 'users', {}, {}, 'previous', 'next') }}
 
+    <p>
+        {% if is_super %}
+            <a class="btn" href="{{ uriFor('user.add') }}">Add User</a>
+        {% else %}
+            {{ macros.disabled_button('Add Permissions') }}
+        {% endif %}
+    </p>
+
 {% endblock %}
 
 {% block user_table %}
-
-    {% if users %}
-        <table class="table--spacing-medium">
-            <thead>
-                <tr>
-                    <th class="t15">User ID</th>
-                    <th class="t15">Provider</th>
-                    <th>Name</th>
-                </tr>
-            </thead>
-            <tbody>
+    <table class="table--spacing-medium">
+        <thead>
+            <tr>
+                <th class="t15">User ID</th>
+                <th class="t15">Provider</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if users %}
                 {% for user in users %}
                     <tr>
                         <td>
@@ -45,10 +54,11 @@
                         </td>
                     </tr>
                 {% endfor %}
-            </tbody>
-        </table>
-
-    {% else %}
-        <p>There are no users.</p>
-    {% endif %}
+            {% else %}
+                <tr>
+                    <td colspan="3">No users available.</td>
+                </tr>
+            {% endif %}
+        </tbody>
+    </table>
 {% endblock %}
