--- a/templates/credentials/add_credential.twig
+++ b/templates/credentials/add_credential.twig
@@ -60,57 +60,9 @@
 
         <hr>
 
-        <ul class="form-fields form-wrapper">
-            <li data-type-specific data-aws_static>
-                <label for="aws_key">AWS Access Key</label>
-                <input type="text" class="text-input" name="aws_key" id="aws_key" maxlength="100" value="{{ form.aws_key }}" autocomplete="off">
-            </li>
-
-            <li data-type-specific data-aws_static>
-                <label for="aws_secret">AWS Secret</label>
-                <input type="text" class="text-input" name="aws_secret" id="aws_secret" value="{{ form.aws_secret }}" autocomplete="off">
-                <small>This will be encrypted once saved.</small>
-            </li>
-        </ul>
-
-        <ul class="form-fields form-wrapper">
-            <li data-type-specific data-aws_role>
-                <label for="aws_account">AWS Account ID</label>
-                <input type="text" class="text-input t50" name="aws_account" id="aws_account" value="{{ form.aws_account }}" maxlength="25" autocomplete="off">
-                <small>AWS Account ID of the account that owns the resources.</small>
-            </li>
-
-            <li data-type-specific data-aws_role>
-                <label for="aws_role">AWS Role</label>
-                <input type="text" class="text-input" name="aws_role" id="aws_role" value="{{ form.aws_role }}" maxlength="100" autocomplete="off">
-                <small>Role for Hal to assume when modifying resources.</small>
-            </li>
-        </ul>
-
-        <ul class="form-fields form-wrapper">
-            <li data-type-specific data-privatekey>
-                <label for="privatekey_username">Private Key Username</label>
-                <input type="text" class="text-input t50" name="privatekey_username" id="privatekey_username" value="{{ form.privatekey_username }}" maxlength="100" autocomplete="off">
-                <small>User the private key belongs to.</small>
-            </li>
-
-            <li data-type-specific data-privatekey>
-                <label for="privatekey_path">Private Key Path</label>
-                <input type="text" class="text-input" name="privatekey_path" id="privatekey_path" value="{{ form.privatekey_path }}" maxlength="200" autocomplete="off">
-                <small>
-                    Path to the key on the file system. Not required if <b>File</b> is used.
-                </small>
-            </li>
-
-            <li data-type-specific data-privatekey>
-                <label for="privatekey_file">Private Key File</label>
-                <textarea type="text" class="text-input" name="privatekey_file" id="privatekey_file" rows="8">{{ form.privatekey_file }}</textarea>
-                <small>
-                    Contents of the private key file. Not required if <b>Path</b> is used.
-                    This will be encrypted once saved.
-                </small>
-            </li>
-        </ul>
+        {{ block('aws_static_fields') }}
+        {{ block('aws_role_fields') }}
+        {{ block('privatekey_fields') }}
 
         <p>
             <button type="submit" class="btn btn--action">Add Credential</button>
@@ -119,4 +71,62 @@
 
     </form>
 
+{% endblock %}
+
+{% block aws_static_fields %}
+    <ul class="form-fields form-wrapper">
+        <li data-type-specific data-aws_static>
+            <label for="aws_key">AWS Access Key</label>
+            <input type="text" class="text-input" name="aws_key" id="aws_key" maxlength="100" value="{{ form.aws_key }}" autocomplete="off">
+        </li>
+
+        <li data-type-specific data-aws_static>
+            <label for="aws_secret">AWS Secret</label>
+            <input type="text" class="text-input" name="aws_secret" id="aws_secret" value="{{ form.aws_secret }}" autocomplete="off">
+            <small>This will be encrypted once saved.</small>
+        </li>
+    </ul>
+{% endblock %}
+
+{% block aws_role_fields %}
+    <ul class="form-fields form-wrapper">
+        <li data-type-specific data-aws_role>
+            <label for="aws_account">AWS Account ID</label>
+            <input type="text" class="text-input t50" name="aws_account" id="aws_account" value="{{ form.aws_account }}" maxlength="25" autocomplete="off">
+            <small>AWS Account ID of the account that owns the resources.</small>
+        </li>
+
+        <li data-type-specific data-aws_role>
+            <label for="aws_role">AWS Role</label>
+            <input type="text" class="text-input" name="aws_role" id="aws_role" value="{{ form.aws_role }}" maxlength="100" autocomplete="off">
+            <small>Role for Hal to assume when modifying resources.</small>
+        </li>
+    </ul>
+{% endblock %}
+
+{% block privatekey_fields %}
+    <ul class="form-fields form-wrapper">
+        <li data-type-specific data-privatekey>
+            <label for="privatekey_username">Private Key Username</label>
+            <input type="text" class="text-input t50" name="privatekey_username" id="privatekey_username" value="{{ form.privatekey_username }}" maxlength="100" autocomplete="off">
+            <small>User the private key belongs to.</small>
+        </li>
+
+        <li data-type-specific data-privatekey>
+            <label for="privatekey_path">Private Key Path</label>
+            <input type="text" class="text-input" name="privatekey_path" id="privatekey_path" value="{{ form.privatekey_path }}" maxlength="200" autocomplete="off">
+            <small>
+                Path to the key on the file system. Not required if <b>File</b> is used.
+            </small>
+        </li>
+
+        <li data-type-specific data-privatekey>
+            <label for="privatekey_file">Private Key File</label>
+            <textarea type="text" class="text-input" name="privatekey_file" id="privatekey_file" rows="8">{{ form.privatekey_file }}</textarea>
+            <small>
+                Contents of the private key file. Not required if <b>Path</b> is used.
+                This will be encrypted once saved.
+            </small>
+        </li>
+    </ul>
 {% endblock %}
